fixed spacing on messages page

--- a/styles/messages.module.css
+++ b/styles/messages.module.css
@@ -38,6 +38,11 @@
 .container h5 {
   color: black;
   margin-bottom: 0;
+  margin-top: 1rem;
+}
+
+.container p {
+  margin-bottom: 0.5rem;
 }
 
 .leftImage {
@@ -54,7 +59,7 @@ transform: rotate(-20deg);
 }
 
 .pageBody p {
-    margin: 0rem 0.5rem 2rem;
+    margin: 0rem 0.5rem 1rem;
   padding: 0.5rem 0.5rem;
   font-size: 1.3rem;
   border-radius: 50px;
